--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,25 @@
 <resources>
     <string name="app_name">GarbageGuide</string>
+    <string name="ajouter_une_ordure">Ajouter une ordure</string>
+    <string name="papier_journal_prospectus">Papier - Journal - Prospectus</string>
+    <string name="conserve_carton_plastique_canette">Conserve - Carton - Plastique - Canette</string>
+    <string name="verre">Verre</string>
+    <string name="organique_m_nager">Organique - Ménager</string>
+    <string name="non_recyclable">Non recyclable</string>
+    <string name="couleur_de_la_poubelle">Couleur de la poubelle :</string>
+    <string name="couleur">Couleur</string>
+    <string name="annuler">Annuler</string>
+    <string name="valider">Valider</string>
+    <string name="type_du_d_chet">Type du déchet</string>
+    <string name="nom_du_d_chet">Nom du déchet</string>
+    <string name="title_ajouter_une_ordure">Ajouter une ordure</string>
+    <string name="ajouter">Ajouter</string>
+    <string name="mes_ordures">Mes ordures</string>
+    <string name="calendrier">Calendrier</string>
+    <string name="nom_ordure">Nom ordure</string>
+    <string name="no_response">Pas de réponses...</string>
+    <string name="nom_du_dechet">Nom du dechet</string>
+    <string name="retour">Retour</string>
+    <string name="supprimer">Supprimer</string>
+    <string name="quitter">Quitter</string>
 </resources>
