--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,25 +1,35 @@
 <resources>
     <string name="app_name">GarbageGuide</string>
-    <string name="ajouter_une_ordure">Ajouter une ordure</string>
-    <string name="papier_journal_prospectus">Papier - Journal - Prospectus</string>
-    <string name="conserve_carton_plastique_canette">Conserve - Carton - Plastique - Canette</string>
-    <string name="verre">Verre</string>
-    <string name="organique_m_nager">Organique - Ménager</string>
-    <string name="non_recyclable">Non recyclable</string>
-    <string name="couleur_de_la_poubelle">Couleur de la poubelle :</string>
-    <string name="couleur">Couleur</string>
-    <string name="annuler">Annuler</string>
-    <string name="valider">Valider</string>
-    <string name="type_du_d_chet">Type du déchet</string>
-    <string name="nom_du_d_chet">Nom du déchet</string>
-    <string name="title_ajouter_une_ordure">Ajouter une ordure</string>
-    <string name="ajouter">Ajouter</string>
-    <string name="mes_ordures">Mes ordures</string>
-    <string name="calendrier">Calendrier</string>
-    <string name="nom_ordure">Nom ordure</string>
-    <string name="no_response">Pas de réponses...</string>
-    <string name="nom_du_dechet">Nom du dechet</string>
-    <string name="retour">Retour</string>
-    <string name="supprimer">Supprimer</string>
-    <string name="quitter">Quitter</string>
+    <string name="ajouter_une_ordure">Add garbage</string>
+    <string name="papier_journal_prospectus">Paper - Newspaper - Brochures</string>
+    <string name="conserve_carton_plastique_canette">Cans - Cardboard - Plastic - Cans</string>
+    <string name="verre">Glass</string>
+    <string name="organique_m_nager">Organic - Household</string>
+    <string name="non_recyclable">Non-recyclable</string>
+    <string name="couleur_de_la_poubelle">Color of the trash can :</string>
+    <string name="couleur">Color</string>
+    <string name="annuler">Cancel</string>
+    <string name="valider">Validate</string>
+    <string name="type_du_d_chet">Type of garbage</string>
+    <string name="nom_du_d_chet">Name of the garbage</string>
+    <string name="title_ajouter_une_ordure">Add garbage</string>
+    <string name="ajouter">Add</string>
+    <string name="mes_ordures">My garbages</string>
+    <string name="calendrier">Calendar</string>
+    <string name="nom_ordure">Name of garbage</string>
+    <string name="no_response">No responses...</string>
+    <string name="nom_du_dechet">Name of garbage</string>
+    <string name="retour">Return</string>
+    <string name="supprimer">Delete</string>
+    <string name="quitter">Quit</string>
+    <string name="bleue">Blue</string>
+    <string name="jaune">Yellow</string>
+    <string name="verte">Green</string>
+    <string name="noire">Black</string>
+    <string name="grise_rouge_ou_marron">Grey, Red ou Brown</string>
+    <string name="toast_goodTrash">Congratulation, this is the right bin for this garbage</string>
+    <string name="toast_badTrash">Unlucky, it was not this bin </string>
+    <string name="ordure">Garbage </string>
+    <string name="ajoutee"> add !</string>
+    <string name="pas_de_reponse">No response...</string>
 </resources>
